--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,35 @@
-@import "tailwindcss";
+/* @import "tailwindcss"; */
+body{
+    background-color: beige;
+    border: solid;
+     border-radius: 20px;
+}
+.itemlist{
+    display: flex;
+    margin: 20px;
+    padding: 20px;
+    border: solid;
+    border-radius: 20px;
+    background-color: #00a6f4;
+}
+div{
+    padding: 20px;
+    gap: 10px;
+}
+h1{
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 50px;
+    padding: 10px;
+    gap: 5px;
+
+}
+img{
+    width: 200px;
+    height: 200px;
+}
+.item{
+    border: solid;
+    border-radius: 20px;
+    background-color: #f8fafc;
+}
